noinst_LIBRARIES = libexpat.a

libexpat_a_SOURCES = expat/ascii.h expat/asciitab.h expat/expat_external.h expat/expat.h expat/iasciitab.h expat/internal.h expat/latin1tab.h expat/macconfig.h expat/nametab.h expat/utf8tab.h expat/winconfig.h expat/xmlparse.c expat/xmlrole.c expat/xmlrole.h expat/xmltok.c expat/xmltok.h expat/xmltok_impl.c expat/xmltok_impl.h expat/xmltok_ns.c

